# ipolDevel

./: .#roadmap.txt  .dockerignore  .gitignore  AUTHORS  Dockerfile  README.md  apt-get_requirements.txt  flake.nix  gunicorn_start_cp2  pyproject.toml  requirements.txt  roadmap.txt
ipol_demo/modules/core/: Dockerfile  app.py  archive.py  compose.yaml  config.py  core.conf  core.py  errors.py  guards.py  ipolevaluator  main.py  pyproject.toml  requirements.txt  start.sh
ipol_demo/modules/core/Tools/: evaluator.py  image.py  sendarchive.py
ipol_demo/modules/core/archive/: archive.py  router.py
ipol_demo/modules/core/archive/db/: drop_create_db_schema.sql
ipol_demo/modules/core/blobs/: blobs.py  database.py  errors.py  router.py
ipol_demo/modules/core/blobs/db/: drop_create_db_schema.sql
ipol_demo/modules/core/conversion/: conversion.py  ipolutils  router.py
ipol_demo/modules/core/core/: archive.py  archive_utils.py  core.py  router.py
ipol_demo/modules/core/demoinfo/: demoinfo.py  model.py  router.py  tools.py
ipol_demo/modules/core/dispatcher/: dispatcher.py  policy.py  router.py
ipol_demo/modules/core/ipol_core/: __init__.py  app.py  config.py  guards.py  logger.py
ipol_demo/modules/core/ipol_core/conversion/: conversion.py  errors.py  router.py
ipol_demo/modules/core/ipol_core/core/: archive.py  core.py  errors.py  router.py
ipol_demo/modules/core/ipol_core/demoinfo/: router.py
ipol_demo/modules/core/ipol_core/dispatcher/: dispatcher.py  (+2 more)
ipol_demo/modules/core/tests/: test_archive.py  test_conversion.py  test_demoinfo.py  test_dispatcher.py
(+933 files in other folders)
